# quri-parts-riqu

./: .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mypy.ini  pyproject.toml
.github/workflows/: licensed.yml  package.yml  python-publish.yaml  release.yaml  test.yaml  test.yml  update_version.yaml
docs/: .gitignore  conf.py  reference.rst  requirements.txt  sphinx-apidoc.sh  tutorials.rst
docs/quri_parts/riqu/: modules.rst  quri_parts.riqu.backend.rst  quri_parts.riqu.backend.sampling.rst  quri_parts.riqu.rest.api.job_api.rst  quri_parts.riqu.rest.api.rst  quri_parts.riqu.rest.api_client.rst  quri_parts.riqu.rest.configuration.rst  quri_parts.riqu.rest.models.inline_response201.rst  quri_parts.riqu.rest.models.inline_response400.rst  quri_parts.riqu.rest.models.job.rst  quri_parts.riqu.rest.models.jobs_body.rst  quri_parts.riqu.rest.models.rst  quri_parts.riqu.rest.rest.rst  quri_parts.riqu.rest.rst  quri_parts.riqu.rst  quri_parts.rst
docs/tutorials/: qaoa_with_server_side_execution.ipynb  sampling_on_riqu_server.ipynb
docs_html/quri_parts/riqu/: modules.html  quri_parts.html  quri_parts.riqu.backend.html  quri_parts.riqu.backend.sampling.html  quri_parts.riqu.backend.sse.html  quri_parts.riqu.html  quri_parts.riqu.rest.api.html  quri_parts.riqu.rest.api.job_api.html  quri_parts.riqu.rest.api_client.html  quri_parts.riqu.rest.configuration.html  quri_parts.riqu.rest.html  quri_parts.riqu.rest.models.html  quri_parts.riqu.rest.models.inline_response201.html  quri_parts.riqu.rest.models.inline_response400.html  quri_parts.riqu.rest.models.job.html  quri_parts.riqu.rest.models.jobs_body.html  quri_parts.riqu.rest.models.ssejobs_body.html  quri_parts.riqu.rest.rest.html
quri_parts/riqu/: __init__.py  samplar.py
quri_parts/riqu/backend/: __init__.py  estimator.py  sampling.py  sse.py
quri_parts/riqu/backend/rest/: __init__.py  api_client.py  configuration.py
quri_parts/riqu/backend/rest/api/: __init__.py  job_api.py
quri_parts/riqu/backend/rest/models/: __init__.py  inline_response400.py  jobs_body.py
quri_parts/riqu/rest/: __init__.py  api_client.py  configuration.py  rest.py
quri_parts/riqu/rest/api/: __init__.py  job_api.py
quri_parts/riqu/rest/models/: __init__.py  inline_response201.py  inline_response400.py  job.py  jobs_body.py  ssejobs_body.py
tests/riqu/backend/: test_sampling.py  test_sse.py
